--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>super cat</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>Hello</h1>
   <p>This is Super Cat Studios</p>
 </body>
 </html>
